...
                  ),
                ),

                Padding(
                  padding: EdgeInsets.only(right: 4.0.w, top: 4.0.h),
                  child: GestureDetector(
                    key: const Key('favorite_grid_delete_button'),
                    onTap: onDelete,
                    child: Container(
                      width: 30.w,
                      height: 30.h,
                      padding: EdgeInsets.fromLTRB(4.w, 5.h, 4.w, 5.h),
                      decoration: BoxDecoration(
...
