...
                        cubit.deleteFavorite(favoriteId);
                      } else {
                        cubit.addFavorite(breed.id, 'user_${breed.id}');
                      }
                    },
                    child: SvgPicture.asset(
                      key: Key("favorite_key"),
                      isFavorited
                          ? Assets.svgsHeartFilledSvg
                          : Assets.svgsHeartSvg,
                      width: 28.w,
                      height: 28.h,
                    ),
...
